// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#fetchApiGatewayApiConfigs should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "User",
      ],
      "_key": "j1-gc-integration-dev-gke-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "displayName": "JupiterOne Integration Development GKE Service Account",
            "email": "j1-gc-integration-dev-gke-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
            "etag": "MDEwMjE5MjA=",
            "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-gke-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
            "oauth2ClientId": "109047516442840366192",
            "projectId": "j1-gc-integration-dev-v2",
            "uniqueId": "109047516442840366192",
          },
        },
      ],
      "_type": "google_iam_service_account",
      "active": true,
      "createdOn": undefined,
      "description": undefined,
      "displayName": "JupiterOne Integration Development GKE Service Account",
      "email": "j1-gc-integration-dev-gke-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "enabled": true,
      "etag": "MDEwMjE5MjA=",
      "id": "109047516442840366192",
      "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-gke-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "oauth2ClientId": "109047516442840366192",
      "projectId": "j1-gc-integration-dev-v2",
      "username": "j1-gc-integration-dev-gke-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/109047516442840366192?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": [
        "AccessKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-gke-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/6c7d692ca893abc15a5a4bb9ea7850d6b0ad6f51",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "keyAlgorithm": "KEY_ALG_RSA_2048",
            "keyOrigin": "GOOGLE_PROVIDED",
            "keyType": "SYSTEM_MANAGED",
            "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-gke-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/6c7d692ca893abc15a5a4bb9ea7850d6b0ad6f51",
            "validAfterTime": "2021-03-25T19:03:56Z",
            "validBeforeTime": "2021-04-10T19:03:56Z",
          },
        },
      ],
      "_type": "google_iam_service_account_key",
      "algorithm": "KEY_ALG_RSA_2048",
      "createdOn": 1616699036000,
      "displayName": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-gke-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/6c7d692ca893abc15a5a4bb9ea7850d6b0ad6f51",
      "expiresOn": 1618081436000,
      "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-gke-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/6c7d692ca893abc15a5a4bb9ea7850d6b0ad6f51",
      "origin": "GOOGLE_PROVIDED",
      "type": "SYSTEM_MANAGED",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/109047516442840366192?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": [
        "AccessKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-gke-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/8d5bcfd02f1505add3dd07cc7ffdead2d70d2e39",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "keyAlgorithm": "KEY_ALG_RSA_2048",
            "keyOrigin": "GOOGLE_PROVIDED",
            "keyType": "SYSTEM_MANAGED",
            "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-gke-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/8d5bcfd02f1505add3dd07cc7ffdead2d70d2e39",
            "validAfterTime": "2021-04-02T19:20:21Z",
            "validBeforeTime": "2021-04-18T19:20:21Z",
          },
        },
      ],
      "_type": "google_iam_service_account_key",
      "algorithm": "KEY_ALG_RSA_2048",
      "createdOn": 1617391221000,
      "displayName": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-gke-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/8d5bcfd02f1505add3dd07cc7ffdead2d70d2e39",
      "expiresOn": 1618773621000,
      "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-gke-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/8d5bcfd02f1505add3dd07cc7ffdead2d70d2e39",
      "origin": "GOOGLE_PROVIDED",
      "type": "SYSTEM_MANAGED",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/109047516442840366192?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": [
        "User",
      ],
      "_key": "j1-gc-integration-dev-v2@appspot.gserviceaccount.com",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "displayName": "App Engine default service account",
            "email": "j1-gc-integration-dev-v2@appspot.gserviceaccount.com",
            "etag": "MDEwMjE5MjA=",
            "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@appspot.gserviceaccount.com",
            "oauth2ClientId": "114130748867730645561",
            "projectId": "j1-gc-integration-dev-v2",
            "uniqueId": "114130748867730645561",
          },
        },
      ],
      "_type": "google_iam_service_account",
      "active": true,
      "createdOn": undefined,
      "description": undefined,
      "displayName": "App Engine default service account",
      "email": "j1-gc-integration-dev-v2@appspot.gserviceaccount.com",
      "enabled": true,
      "etag": "MDEwMjE5MjA=",
      "id": "114130748867730645561",
      "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@appspot.gserviceaccount.com",
      "oauth2ClientId": "114130748867730645561",
      "projectId": "j1-gc-integration-dev-v2",
      "username": "j1-gc-integration-dev-v2@appspot.gserviceaccount.com",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/114130748867730645561?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": [
        "AccessKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@appspot.gserviceaccount.com/keys/9655f5ac5cfb235daadc8d17ffceff8d0ffd2c36",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "keyAlgorithm": "KEY_ALG_RSA_2048",
            "keyOrigin": "GOOGLE_PROVIDED",
            "keyType": "SYSTEM_MANAGED",
            "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@appspot.gserviceaccount.com/keys/9655f5ac5cfb235daadc8d17ffceff8d0ffd2c36",
            "validAfterTime": "2021-03-25T19:03:57Z",
            "validBeforeTime": "2021-04-10T19:03:57Z",
          },
        },
      ],
      "_type": "google_iam_service_account_key",
      "algorithm": "KEY_ALG_RSA_2048",
      "createdOn": 1616699037000,
      "displayName": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@appspot.gserviceaccount.com/keys/9655f5ac5cfb235daadc8d17ffceff8d0ffd2c36",
      "expiresOn": 1618081437000,
      "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@appspot.gserviceaccount.com/keys/9655f5ac5cfb235daadc8d17ffceff8d0ffd2c36",
      "origin": "GOOGLE_PROVIDED",
      "type": "SYSTEM_MANAGED",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/114130748867730645561?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": [
        "AccessKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@appspot.gserviceaccount.com/keys/55a3f637227583bc03a2ffcba71355c31b7acfa8",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "keyAlgorithm": "KEY_ALG_RSA_2048",
            "keyOrigin": "GOOGLE_PROVIDED",
            "keyType": "SYSTEM_MANAGED",
            "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@appspot.gserviceaccount.com/keys/55a3f637227583bc03a2ffcba71355c31b7acfa8",
            "validAfterTime": "2021-04-02T19:20:22Z",
            "validBeforeTime": "2021-04-18T19:20:22Z",
          },
        },
      ],
      "_type": "google_iam_service_account_key",
      "algorithm": "KEY_ALG_RSA_2048",
      "createdOn": 1617391222000,
      "displayName": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@appspot.gserviceaccount.com/keys/55a3f637227583bc03a2ffcba71355c31b7acfa8",
      "expiresOn": 1618773622000,
      "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@appspot.gserviceaccount.com/keys/55a3f637227583bc03a2ffcba71355c31b7acfa8",
      "origin": "GOOGLE_PROVIDED",
      "type": "SYSTEM_MANAGED",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/114130748867730645561?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": [
        "User",
      ],
      "_key": "711888229551-compute@developer.gserviceaccount.com",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "displayName": "Compute Engine default service account",
            "email": "711888229551-compute@developer.gserviceaccount.com",
            "etag": "MDEwMjE5MjA=",
            "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/711888229551-compute@developer.gserviceaccount.com",
            "oauth2ClientId": "110435481673934914552",
            "projectId": "j1-gc-integration-dev-v2",
            "uniqueId": "110435481673934914552",
          },
        },
      ],
      "_type": "google_iam_service_account",
      "active": true,
      "createdOn": undefined,
      "description": undefined,
      "displayName": "Compute Engine default service account",
      "email": "711888229551-compute@developer.gserviceaccount.com",
      "enabled": true,
      "etag": "MDEwMjE5MjA=",
      "id": "110435481673934914552",
      "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/711888229551-compute@developer.gserviceaccount.com",
      "oauth2ClientId": "110435481673934914552",
      "projectId": "j1-gc-integration-dev-v2",
      "username": "711888229551-compute@developer.gserviceaccount.com",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/110435481673934914552?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": [
        "AccessKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/serviceAccounts/711888229551-compute@developer.gserviceaccount.com/keys/7f1500b2b5cf2d3157bf5aed9d3eda9e08377e80",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "keyAlgorithm": "KEY_ALG_RSA_2048",
            "keyOrigin": "GOOGLE_PROVIDED",
            "keyType": "SYSTEM_MANAGED",
            "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/711888229551-compute@developer.gserviceaccount.com/keys/7f1500b2b5cf2d3157bf5aed9d3eda9e08377e80",
            "validAfterTime": "2021-03-25T19:03:57Z",
            "validBeforeTime": "2021-04-10T19:03:57Z",
          },
        },
      ],
      "_type": "google_iam_service_account_key",
      "algorithm": "KEY_ALG_RSA_2048",
      "createdOn": 1616699037000,
      "displayName": "projects/j1-gc-integration-dev-v2/serviceAccounts/711888229551-compute@developer.gserviceaccount.com/keys/7f1500b2b5cf2d3157bf5aed9d3eda9e08377e80",
      "expiresOn": 1618081437000,
      "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/711888229551-compute@developer.gserviceaccount.com/keys/7f1500b2b5cf2d3157bf5aed9d3eda9e08377e80",
      "origin": "GOOGLE_PROVIDED",
      "type": "SYSTEM_MANAGED",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/110435481673934914552?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": [
        "AccessKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/serviceAccounts/711888229551-compute@developer.gserviceaccount.com/keys/634486f24974d5f12a60f0312c478a2b7b9c71bd",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "keyAlgorithm": "KEY_ALG_RSA_2048",
            "keyOrigin": "GOOGLE_PROVIDED",
            "keyType": "SYSTEM_MANAGED",
            "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/711888229551-compute@developer.gserviceaccount.com/keys/634486f24974d5f12a60f0312c478a2b7b9c71bd",
            "validAfterTime": "2021-04-02T19:20:23Z",
            "validBeforeTime": "2021-04-18T19:20:23Z",
          },
        },
      ],
      "_type": "google_iam_service_account_key",
      "algorithm": "KEY_ALG_RSA_2048",
      "createdOn": 1617391223000,
      "displayName": "projects/j1-gc-integration-dev-v2/serviceAccounts/711888229551-compute@developer.gserviceaccount.com/keys/634486f24974d5f12a60f0312c478a2b7b9c71bd",
      "expiresOn": 1618773623000,
      "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/711888229551-compute@developer.gserviceaccount.com/keys/634486f24974d5f12a60f0312c478a2b7b9c71bd",
      "origin": "GOOGLE_PROVIDED",
      "type": "SYSTEM_MANAGED",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/110435481673934914552?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": [
        "User",
      ],
      "_key": "j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "description": "Service account for local Google Cloud integration development for Creativice team",
            "displayName": "j1-gc-integration-dev-v2-cr",
            "email": "j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
            "etag": "MDEwMjE5MjA=",
            "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
            "oauth2ClientId": "105836918573850510889",
            "projectId": "j1-gc-integration-dev-v2",
            "uniqueId": "105836918573850510889",
          },
        },
      ],
      "_type": "google_iam_service_account",
      "active": true,
      "createdOn": undefined,
      "description": "Service account for local Google Cloud integration development for Creativice team",
      "displayName": "j1-gc-integration-dev-v2-cr",
      "email": "j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "enabled": true,
      "etag": "MDEwMjE5MjA=",
      "id": "105836918573850510889",
      "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "oauth2ClientId": "105836918573850510889",
      "projectId": "j1-gc-integration-dev-v2",
      "username": "j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/105836918573850510889?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": [
        "AccessKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/c4e00da17af513eed897c83891831385668d4cd4",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "keyAlgorithm": "KEY_ALG_RSA_2048",
            "keyOrigin": "GOOGLE_PROVIDED",
            "keyType": "SYSTEM_MANAGED",
            "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/c4e00da17af513eed897c83891831385668d4cd4",
            "validAfterTime": "2021-03-25T19:03:57Z",
            "validBeforeTime": "2021-04-10T19:03:57Z",
          },
        },
      ],
      "_type": "google_iam_service_account_key",
      "algorithm": "KEY_ALG_RSA_2048",
      "createdOn": 1616699037000,
      "displayName": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/c4e00da17af513eed897c83891831385668d4cd4",
      "expiresOn": 1618081437000,
      "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/c4e00da17af513eed897c83891831385668d4cd4",
      "origin": "GOOGLE_PROVIDED",
      "type": "SYSTEM_MANAGED",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/105836918573850510889?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": [
        "AccessKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/85d5b1938816a5eaecccaf3c3f12c29e95064768",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "keyAlgorithm": "KEY_ALG_RSA_2048",
            "keyOrigin": "GOOGLE_PROVIDED",
            "keyType": "SYSTEM_MANAGED",
            "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/85d5b1938816a5eaecccaf3c3f12c29e95064768",
            "validAfterTime": "2021-04-02T19:20:24Z",
            "validBeforeTime": "2021-04-18T19:20:24Z",
          },
        },
      ],
      "_type": "google_iam_service_account_key",
      "algorithm": "KEY_ALG_RSA_2048",
      "createdOn": 1617391224000,
      "displayName": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/85d5b1938816a5eaecccaf3c3f12c29e95064768",
      "expiresOn": 1618773624000,
      "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/85d5b1938816a5eaecccaf3c3f12c29e95064768",
      "origin": "GOOGLE_PROVIDED",
      "type": "SYSTEM_MANAGED",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/105836918573850510889?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": [
        "AccessKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/03ea94346fbe872143f20d6dd1c644188050af14",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "keyAlgorithm": "KEY_ALG_RSA_2048",
            "keyOrigin": "GOOGLE_PROVIDED",
            "keyType": "USER_MANAGED",
            "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/03ea94346fbe872143f20d6dd1c644188050af14",
            "validAfterTime": "2021-02-18T16:11:22Z",
            "validBeforeTime": "9999-12-31T23:59:59Z",
          },
        },
      ],
      "_type": "google_iam_service_account_key",
      "algorithm": "KEY_ALG_RSA_2048",
      "createdOn": 1613664682000,
      "displayName": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/03ea94346fbe872143f20d6dd1c644188050af14",
      "expiresOn": 253402300799000,
      "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/03ea94346fbe872143f20d6dd1c644188050af14",
      "origin": "GOOGLE_PROVIDED",
      "type": "USER_MANAGED",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/105836918573850510889?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": [
        "User",
      ],
      "_key": "j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "description": "Used to provision Terraform locally for integration development",
            "displayName": "j1-gc-integration-dev-v2-tf",
            "email": "j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
            "etag": "MDEwMjE5MjA=",
            "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
            "oauth2ClientId": "101172014592767351387",
            "projectId": "j1-gc-integration-dev-v2",
            "uniqueId": "101172014592767351387",
          },
        },
      ],
      "_type": "google_iam_service_account",
      "active": true,
      "createdOn": undefined,
      "description": "Used to provision Terraform locally for integration development",
      "displayName": "j1-gc-integration-dev-v2-tf",
      "email": "j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "enabled": true,
      "etag": "MDEwMjE5MjA=",
      "id": "101172014592767351387",
      "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "oauth2ClientId": "101172014592767351387",
      "projectId": "j1-gc-integration-dev-v2",
      "username": "j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/101172014592767351387?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": [
        "AccessKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/fc8c7168c3616beb116145aab82e4fbcc544427b",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "keyAlgorithm": "KEY_ALG_RSA_2048",
            "keyOrigin": "GOOGLE_PROVIDED",
            "keyType": "SYSTEM_MANAGED",
            "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/fc8c7168c3616beb116145aab82e4fbcc544427b",
            "validAfterTime": "2021-03-25T19:03:57Z",
            "validBeforeTime": "2021-04-10T19:03:57Z",
          },
        },
      ],
      "_type": "google_iam_service_account_key",
      "algorithm": "KEY_ALG_RSA_2048",
      "createdOn": 1616699037000,
      "displayName": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/fc8c7168c3616beb116145aab82e4fbcc544427b",
      "expiresOn": 1618081437000,
      "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/fc8c7168c3616beb116145aab82e4fbcc544427b",
      "origin": "GOOGLE_PROVIDED",
      "type": "SYSTEM_MANAGED",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/101172014592767351387?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": [
        "AccessKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/caaca658927e6610064ee352dc740b748e8c9a65",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "keyAlgorithm": "KEY_ALG_RSA_2048",
            "keyOrigin": "GOOGLE_PROVIDED",
            "keyType": "SYSTEM_MANAGED",
            "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/caaca658927e6610064ee352dc740b748e8c9a65",
            "validAfterTime": "2021-04-02T19:20:25Z",
            "validBeforeTime": "2021-04-18T19:20:25Z",
          },
        },
      ],
      "_type": "google_iam_service_account_key",
      "algorithm": "KEY_ALG_RSA_2048",
      "createdOn": 1617391225000,
      "displayName": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/caaca658927e6610064ee352dc740b748e8c9a65",
      "expiresOn": 1618773625000,
      "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/caaca658927e6610064ee352dc740b748e8c9a65",
      "origin": "GOOGLE_PROVIDED",
      "type": "SYSTEM_MANAGED",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/101172014592767351387?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": [
        "AccessKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/356dd804631efc24a230a1a54842cc61bf1cdcbb",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "keyAlgorithm": "KEY_ALG_RSA_2048",
            "keyOrigin": "GOOGLE_PROVIDED",
            "keyType": "USER_MANAGED",
            "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/356dd804631efc24a230a1a54842cc61bf1cdcbb",
            "validAfterTime": "2021-02-17T21:32:02Z",
            "validBeforeTime": "9999-12-31T23:59:59Z",
          },
        },
      ],
      "_type": "google_iam_service_account_key",
      "algorithm": "KEY_ALG_RSA_2048",
      "createdOn": 1613597522000,
      "displayName": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/356dd804631efc24a230a1a54842cc61bf1cdcbb",
      "expiresOn": 253402300799000,
      "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/356dd804631efc24a230a1a54842cc61bf1cdcbb",
      "origin": "GOOGLE_PROVIDED",
      "type": "USER_MANAGED",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/101172014592767351387?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": [
        "User",
      ],
      "_key": "j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "description": "Service account for local Google Cloud integration development",
            "displayName": "j1-gc-integration-dev-v2",
            "email": "j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
            "etag": "MDEwMjE5MjA=",
            "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
            "oauth2ClientId": "110729620490680242066",
            "projectId": "j1-gc-integration-dev-v2",
            "uniqueId": "110729620490680242066",
          },
        },
      ],
      "_type": "google_iam_service_account",
      "active": true,
      "createdOn": undefined,
      "description": "Service account for local Google Cloud integration development",
      "displayName": "j1-gc-integration-dev-v2",
      "email": "j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "enabled": true,
      "etag": "MDEwMjE5MjA=",
      "id": "110729620490680242066",
      "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "oauth2ClientId": "110729620490680242066",
      "projectId": "j1-gc-integration-dev-v2",
      "username": "j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/110729620490680242066?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": [
        "AccessKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/8afa075ddd2f76eb9be4d6394ee315eec7442c1c",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "keyAlgorithm": "KEY_ALG_RSA_2048",
            "keyOrigin": "GOOGLE_PROVIDED",
            "keyType": "SYSTEM_MANAGED",
            "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/8afa075ddd2f76eb9be4d6394ee315eec7442c1c",
            "validAfterTime": "2021-03-25T19:03:57Z",
            "validBeforeTime": "2021-04-10T19:03:57Z",
          },
        },
      ],
      "_type": "google_iam_service_account_key",
      "algorithm": "KEY_ALG_RSA_2048",
      "createdOn": 1616699037000,
      "displayName": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/8afa075ddd2f76eb9be4d6394ee315eec7442c1c",
      "expiresOn": 1618081437000,
      "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/8afa075ddd2f76eb9be4d6394ee315eec7442c1c",
      "origin": "GOOGLE_PROVIDED",
      "type": "SYSTEM_MANAGED",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/110729620490680242066?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": [
        "AccessKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/993ca6c6379e2b3910f80bf7d8e6b96d975cee8d",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "keyAlgorithm": "KEY_ALG_RSA_2048",
            "keyOrigin": "GOOGLE_PROVIDED",
            "keyType": "SYSTEM_MANAGED",
            "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/993ca6c6379e2b3910f80bf7d8e6b96d975cee8d",
            "validAfterTime": "2021-04-02T19:21:00Z",
            "validBeforeTime": "2021-04-18T19:21:00Z",
          },
        },
      ],
      "_type": "google_iam_service_account_key",
      "algorithm": "KEY_ALG_RSA_2048",
      "createdOn": 1617391260000,
      "displayName": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/993ca6c6379e2b3910f80bf7d8e6b96d975cee8d",
      "expiresOn": 1618773660000,
      "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/993ca6c6379e2b3910f80bf7d8e6b96d975cee8d",
      "origin": "GOOGLE_PROVIDED",
      "type": "SYSTEM_MANAGED",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/110729620490680242066?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": [
        "AccessKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/eba8d249879180d3d6ae91212e20ac9c2c0fd303",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "keyAlgorithm": "KEY_ALG_RSA_2048",
            "keyOrigin": "GOOGLE_PROVIDED",
            "keyType": "USER_MANAGED",
            "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/eba8d249879180d3d6ae91212e20ac9c2c0fd303",
            "validAfterTime": "2021-02-18T01:10:51Z",
            "validBeforeTime": "9999-12-31T23:59:59Z",
          },
        },
      ],
      "_type": "google_iam_service_account_key",
      "algorithm": "KEY_ALG_RSA_2048",
      "createdOn": 1613610651000,
      "displayName": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/eba8d249879180d3d6ae91212e20ac9c2c0fd303",
      "expiresOn": 253402300799000,
      "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/eba8d249879180d3d6ae91212e20ac9c2c0fd303",
      "origin": "GOOGLE_PROVIDED",
      "type": "USER_MANAGED",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/110729620490680242066?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": [
        "AccessKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/774a9030e711a3ada0f9dc19c357c3f04a198a27",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "keyAlgorithm": "KEY_ALG_RSA_2048",
            "keyOrigin": "GOOGLE_PROVIDED",
            "keyType": "USER_MANAGED",
            "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/774a9030e711a3ada0f9dc19c357c3f04a198a27",
            "validAfterTime": "2021-02-18T16:53:23Z",
            "validBeforeTime": "9999-12-31T23:59:59Z",
          },
        },
      ],
      "_type": "google_iam_service_account_key",
      "algorithm": "KEY_ALG_RSA_2048",
      "createdOn": 1613667203000,
      "displayName": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/774a9030e711a3ada0f9dc19c357c3f04a198a27",
      "expiresOn": 253402300799000,
      "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/774a9030e711a3ada0f9dc19c357c3f04a198a27",
      "origin": "GOOGLE_PROVIDED",
      "type": "USER_MANAGED",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/110729620490680242066?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": [
        "Service",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/locations/global/apis/example-api-gateway-endpoint",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-03-30T21:15:27.820351650Z",
            "displayName": "Example API Gateway Endpoint",
            "managedService": "example-api-gateway-endpoint-0fo33j5zaqt68.apigateway.j1-gc-integration-dev-v2.cloud.goog",
            "name": "projects/j1-gc-integration-dev-v2/locations/global/apis/example-api-gateway-endpoint",
            "state": "ACTIVE",
            "updateTime": "2021-03-30T21:17:06.954180503Z",
          },
        },
      ],
      "_type": "google_api_gateway_api",
      "category": [
        "network",
      ],
      "createdOn": 1617138927820,
      "displayName": "Example API Gateway Endpoint",
      "function": [
        "api-gateway",
      ],
      "managedService": "example-api-gateway-endpoint-0fo33j5zaqt68.apigateway.j1-gc-integration-dev-v2.cloud.goog",
      "name": "projects/j1-gc-integration-dev-v2/locations/global/apis/example-api-gateway-endpoint",
      "public": false,
      "state": "ACTIVE",
      "updatedOn": 1617139026954,
      "webLink": "https://console.cloud.google.com/api-gateway/api/example-api-gateway-endpoint/servicename/example-api-gateway-endpoint-0fo33j5zaqt68.apigateway.j1-gc-integration-dev-v2.cloud.goog/overview?project=j1-gc-integration-dev-v2",
    },
    {
      "_class": [
        "Configuration",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/locations/global/apis/example-api-gateway-endpoint/configs/example-config",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-03-30T21:17:10.657320375Z",
            "displayName": "Example Config",
            "gatewayServiceAccount": "projects/-/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
            "name": "projects/j1-gc-integration-dev-v2/locations/global/apis/example-api-gateway-endpoint/configs/example-config",
            "serviceConfigId": "example-config-3u3w8my3mj12x",
            "state": "ACTIVE",
            "updateTime": "2021-03-31T13:57:35.950462993Z",
          },
        },
      ],
      "_type": "google_api_gateway_api_config",
      "createdOn": 1617139030657,
      "displayName": "Example Config",
      "name": "projects/j1-gc-integration-dev-v2/locations/global/apis/example-api-gateway-endpoint/configs/example-config",
      "public": false,
      "state": "ACTIVE",
      "updatedOn": 1617199055950,
      "webLink": "https://console.cloud.google.com/api-gateway/api/example-api-gateway-endpoint/servicename/example-api-gateway-endpoint-0fo33j5zaqt68.apigateway.j1-gc-integration-dev-v2.cloud.goog/configs/example-config/rollout/example-config-3u3w8my3mj12x/details?project=j1-gc-integration-dev-v2",
    },
  ],
  "collectedRelationships": [
    {
      "_class": "HAS",
      "_fromEntityKey": "j1-gc-integration-dev-gke-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "_key": "j1-gc-integration-dev-gke-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com|has|projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-gke-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/6c7d692ca893abc15a5a4bb9ea7850d6b0ad6f51",
      "_toEntityKey": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-gke-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/6c7d692ca893abc15a5a4bb9ea7850d6b0ad6f51",
      "_type": "google_iam_service_account_has_key",
      "displayName": "HAS",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/109047516442840366192?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "j1-gc-integration-dev-gke-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "_key": "j1-gc-integration-dev-gke-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com|has|projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-gke-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/8d5bcfd02f1505add3dd07cc7ffdead2d70d2e39",
      "_toEntityKey": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-gke-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/8d5bcfd02f1505add3dd07cc7ffdead2d70d2e39",
      "_type": "google_iam_service_account_has_key",
      "displayName": "HAS",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/109047516442840366192?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "j1-gc-integration-dev-v2@appspot.gserviceaccount.com",
      "_key": "j1-gc-integration-dev-v2@appspot.gserviceaccount.com|has|projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@appspot.gserviceaccount.com/keys/9655f5ac5cfb235daadc8d17ffceff8d0ffd2c36",
      "_toEntityKey": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@appspot.gserviceaccount.com/keys/9655f5ac5cfb235daadc8d17ffceff8d0ffd2c36",
      "_type": "google_iam_service_account_has_key",
      "displayName": "HAS",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/114130748867730645561?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "j1-gc-integration-dev-v2@appspot.gserviceaccount.com",
      "_key": "j1-gc-integration-dev-v2@appspot.gserviceaccount.com|has|projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@appspot.gserviceaccount.com/keys/55a3f637227583bc03a2ffcba71355c31b7acfa8",
      "_toEntityKey": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@appspot.gserviceaccount.com/keys/55a3f637227583bc03a2ffcba71355c31b7acfa8",
      "_type": "google_iam_service_account_has_key",
      "displayName": "HAS",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/114130748867730645561?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "711888229551-compute@developer.gserviceaccount.com",
      "_key": "711888229551-compute@developer.gserviceaccount.com|has|projects/j1-gc-integration-dev-v2/serviceAccounts/711888229551-compute@developer.gserviceaccount.com/keys/7f1500b2b5cf2d3157bf5aed9d3eda9e08377e80",
      "_toEntityKey": "projects/j1-gc-integration-dev-v2/serviceAccounts/711888229551-compute@developer.gserviceaccount.com/keys/7f1500b2b5cf2d3157bf5aed9d3eda9e08377e80",
      "_type": "google_iam_service_account_has_key",
      "displayName": "HAS",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/110435481673934914552?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "711888229551-compute@developer.gserviceaccount.com",
      "_key": "711888229551-compute@developer.gserviceaccount.com|has|projects/j1-gc-integration-dev-v2/serviceAccounts/711888229551-compute@developer.gserviceaccount.com/keys/634486f24974d5f12a60f0312c478a2b7b9c71bd",
      "_toEntityKey": "projects/j1-gc-integration-dev-v2/serviceAccounts/711888229551-compute@developer.gserviceaccount.com/keys/634486f24974d5f12a60f0312c478a2b7b9c71bd",
      "_type": "google_iam_service_account_has_key",
      "displayName": "HAS",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/110435481673934914552?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "_key": "j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com|has|projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/c4e00da17af513eed897c83891831385668d4cd4",
      "_toEntityKey": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/c4e00da17af513eed897c83891831385668d4cd4",
      "_type": "google_iam_service_account_has_key",
      "displayName": "HAS",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/105836918573850510889?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "_key": "j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com|has|projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/85d5b1938816a5eaecccaf3c3f12c29e95064768",
      "_toEntityKey": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/85d5b1938816a5eaecccaf3c3f12c29e95064768",
      "_type": "google_iam_service_account_has_key",
      "displayName": "HAS",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/105836918573850510889?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "_key": "j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com|has|projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/03ea94346fbe872143f20d6dd1c644188050af14",
      "_toEntityKey": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-cr@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/03ea94346fbe872143f20d6dd1c644188050af14",
      "_type": "google_iam_service_account_has_key",
      "displayName": "HAS",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/105836918573850510889?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "_key": "j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com|has|projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/fc8c7168c3616beb116145aab82e4fbcc544427b",
      "_toEntityKey": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/fc8c7168c3616beb116145aab82e4fbcc544427b",
      "_type": "google_iam_service_account_has_key",
      "displayName": "HAS",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/101172014592767351387?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "_key": "j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com|has|projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/caaca658927e6610064ee352dc740b748e8c9a65",
      "_toEntityKey": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/caaca658927e6610064ee352dc740b748e8c9a65",
      "_type": "google_iam_service_account_has_key",
      "displayName": "HAS",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/101172014592767351387?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "_key": "j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com|has|projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/356dd804631efc24a230a1a54842cc61bf1cdcbb",
      "_toEntityKey": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/356dd804631efc24a230a1a54842cc61bf1cdcbb",
      "_type": "google_iam_service_account_has_key",
      "displayName": "HAS",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/101172014592767351387?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "_key": "j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com|has|projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/8afa075ddd2f76eb9be4d6394ee315eec7442c1c",
      "_toEntityKey": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/8afa075ddd2f76eb9be4d6394ee315eec7442c1c",
      "_type": "google_iam_service_account_has_key",
      "displayName": "HAS",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/110729620490680242066?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "_key": "j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com|has|projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/993ca6c6379e2b3910f80bf7d8e6b96d975cee8d",
      "_toEntityKey": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/993ca6c6379e2b3910f80bf7d8e6b96d975cee8d",
      "_type": "google_iam_service_account_has_key",
      "displayName": "HAS",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/110729620490680242066?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "_key": "j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com|has|projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/eba8d249879180d3d6ae91212e20ac9c2c0fd303",
      "_toEntityKey": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/eba8d249879180d3d6ae91212e20ac9c2c0fd303",
      "_type": "google_iam_service_account_has_key",
      "displayName": "HAS",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/110729620490680242066?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "_key": "j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com|has|projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/774a9030e711a3ada0f9dc19c357c3f04a198a27",
      "_toEntityKey": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/774a9030e711a3ada0f9dc19c357c3f04a198a27",
      "_type": "google_iam_service_account_has_key",
      "displayName": "HAS",
      "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/110729620490680242066?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
    },
    {
      "_class": "USES",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v2/locations/global/apis/example-api-gateway-endpoint",
      "_key": "projects/j1-gc-integration-dev-v2/locations/global/apis/example-api-gateway-endpoint|uses|projects/j1-gc-integration-dev-v2/locations/global/apis/example-api-gateway-endpoint/configs/example-config",
      "_toEntityKey": "projects/j1-gc-integration-dev-v2/locations/global/apis/example-api-gateway-endpoint/configs/example-config",
      "_type": "google_api_gateway_api_uses_config",
      "displayName": "USES",
    },
    {
      "_class": "USES",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v2/locations/global/apis/example-api-gateway-endpoint/configs/example-config",
      "_key": "projects/j1-gc-integration-dev-v2/locations/global/apis/example-api-gateway-endpoint/configs/example-config|uses|j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "_toEntityKey": "j1-gc-integration-dev-v2@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
      "_type": "google_api_gateway_api_config_uses_iam_service_account",
      "displayName": "USES",
    },
  ],
  "encounteredTypes": [
    "google_iam_service_account",
    "google_iam_service_account_key",
    "google_iam_service_account_has_key",
    "google_api_gateway_api",
    "google_api_gateway_api_config",
    "google_api_gateway_api_uses_config",
    "google_api_gateway_api_config_uses_iam_service_account",
  ],
  "numCollectedEntities": 24,
  "numCollectedRelationships": 18,
}
`;

exports[`#fetchApiGatewayApis should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "Service",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/locations/global/apis/example-api-gateway-endpoint",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-03-30T21:15:27.820351650Z",
            "displayName": "Example API Gateway Endpoint",
            "managedService": "example-api-gateway-endpoint-0fo33j5zaqt68.apigateway.j1-gc-integration-dev-v2.cloud.goog",
            "name": "projects/j1-gc-integration-dev-v2/locations/global/apis/example-api-gateway-endpoint",
            "state": "ACTIVE",
            "updateTime": "2021-03-30T21:17:06.954180503Z",
          },
        },
      ],
      "_type": "google_api_gateway_api",
      "category": [
        "network",
      ],
      "createdOn": 1617138927820,
      "displayName": "Example API Gateway Endpoint",
      "function": [
        "api-gateway",
      ],
      "managedService": "example-api-gateway-endpoint-0fo33j5zaqt68.apigateway.j1-gc-integration-dev-v2.cloud.goog",
      "name": "projects/j1-gc-integration-dev-v2/locations/global/apis/example-api-gateway-endpoint",
      "public": false,
      "state": "ACTIVE",
      "updatedOn": 1617139026954,
      "webLink": "https://console.cloud.google.com/api-gateway/api/example-api-gateway-endpoint/servicename/example-api-gateway-endpoint-0fo33j5zaqt68.apigateway.j1-gc-integration-dev-v2.cloud.goog/overview?project=j1-gc-integration-dev-v2",
    },
  ],
  "collectedRelationships": [],
  "encounteredTypes": [
    "google_api_gateway_api",
  ],
  "numCollectedEntities": 1,
  "numCollectedRelationships": 0,
}
`;

exports[`#fetchApiGatewayGateways should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "Service",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/locations/global/apis/example-api-gateway-endpoint",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-03-30T21:15:27.820351650Z",
            "displayName": "Example API Gateway Endpoint",
            "managedService": "example-api-gateway-endpoint-0fo33j5zaqt68.apigateway.j1-gc-integration-dev-v2.cloud.goog",
            "name": "projects/j1-gc-integration-dev-v2/locations/global/apis/example-api-gateway-endpoint",
            "state": "ACTIVE",
            "updateTime": "2021-03-30T21:17:06.954180503Z",
          },
        },
      ],
      "_type": "google_api_gateway_api",
      "category": [
        "network",
      ],
      "createdOn": 1617138927820,
      "displayName": "Example API Gateway Endpoint",
      "function": [
        "api-gateway",
      ],
      "managedService": "example-api-gateway-endpoint-0fo33j5zaqt68.apigateway.j1-gc-integration-dev-v2.cloud.goog",
      "name": "projects/j1-gc-integration-dev-v2/locations/global/apis/example-api-gateway-endpoint",
      "public": false,
      "state": "ACTIVE",
      "updatedOn": 1617139026954,
      "webLink": "https://console.cloud.google.com/api-gateway/api/example-api-gateway-endpoint/servicename/example-api-gateway-endpoint-0fo33j5zaqt68.apigateway.j1-gc-integration-dev-v2.cloud.goog/overview?project=j1-gc-integration-dev-v2",
    },
    {
      "_class": [
        "Gateway",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/locations/us-central1/gateways/example-gateway",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "apiConfig": "projects/711888229551/locations/global/apis/example-api-gateway-endpoint/configs/example-config",
            "createTime": "2021-03-30T21:19:35.916320550Z",
            "defaultHostname": "example-gateway-931bvdf3.uc.gateway.dev",
            "displayName": "Example gateway",
            "name": "projects/j1-gc-integration-dev-v2/locations/us-central1/gateways/example-gateway",
            "state": "ACTIVE",
            "updateTime": "2021-03-31T14:02:49.272381610Z",
          },
        },
      ],
      "_type": "google_api_gateway_gateway",
      "category": [
        "network",
      ],
      "createdOn": 1617139175916,
      "defaultHostname": "example-gateway-931bvdf3.uc.gateway.dev",
      "displayName": "Example gateway",
      "function": [
        "api-gateway",
      ],
      "name": "projects/j1-gc-integration-dev-v2/locations/us-central1/gateways/example-gateway",
      "public": false,
      "state": "ACTIVE",
      "updatedOn": 1617199369272,
      "webLink": "https://console.cloud.google.com/api-gateway/gateway/example-gateway/location/us-central1?project=j1-gc-integration-dev-v2",
    },
  ],
  "collectedRelationships": [
    {
      "_class": "HAS",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v2/locations/global/apis/example-api-gateway-endpoint",
      "_key": "projects/j1-gc-integration-dev-v2/locations/global/apis/example-api-gateway-endpoint|has|projects/j1-gc-integration-dev-v2/locations/us-central1/gateways/example-gateway",
      "_toEntityKey": "projects/j1-gc-integration-dev-v2/locations/us-central1/gateways/example-gateway",
      "_type": "google_api_gateway_api_has_gateway",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": [
    "google_api_gateway_api",
    "google_api_gateway_gateway",
    "google_api_gateway_api_has_gateway",
  ],
  "numCollectedEntities": 2,
  "numCollectedRelationships": 1,
}
`;
